ug FR-381: Add support for stateful and cluster aware WSSC sessions ( as per http://sarek.l7tech.com/mediawiki/index.php/Clustered_WSSecureConversation_Support )
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28790 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1318,6 +1318,15 @@ wss.secureConversation.maxSessions.description=The maximum number of WS-SecureCo
 wss.secureConversation.maxSessions.default=10000
 wss.secureConversation.maxSessions.clusterProperty=wss.secureConversation.maxSessions
 
+wss.secureConversation.clusterSessions.description = Should WS-SecureConversation sessions be shared amongst cluster nodes (true/false)
+wss.secureConversation.clusterSessions.default = false
+wss.secureConversation.clusterSessions.clusterProperty = wss.secureConversation.clusterSessions
+
+wss.secureConversation.clusterSessionsCleanupInterval.description = Interval between successive maintenance of WS-SecureConversation sessions (timeunit)
+wss.secureConversation.clusterSessionsCleanupInterval.default = 33407ms
+wss.secureConversation.clusterSessionsCleanupInterval.visible = false
+wss.secureConversation.clusterSessionsCleanupInterval.clusterProperty = wss.secureConversation.clusterSessionsCleanupInterval
+
 outbound.secureConversation.defaultSessionDuration.description=The default duration for Outbound WS-SecureConversation sessions (timeunit)
 outbound.secureConversation.defaultSessionDuration.default=2h
 outbound.secureConversation.defaultSessionDuration.clusterProperty=outbound.secureConversation.defaultSessionDuration
