--- a/modules/gateway/server/src/main/resources/com/l7tech/server/config/resources/logging.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/config/resources/logging.properties
@@ -7,6 +7,7 @@ com.l7tech.server.config.ListHandler.level = ALL
 
 # Set the default logging level for new FileHandler instances
 java.util.logging.FileHandler.level = ALL
+# Note: configlogging.properties overwrites this property.
 java.util.logging.FileHandler.pattern = ssg_networkingconfig_log.txt
 java.util.logging.FileHandler.formatter = com.l7tech.util.ConfigurableLogFormatter
 java.util.logging.FileHandler.limit = 1000000
