SSM-3381: fixed by adding new hidden cluster property 'audit.search.maxMessageSize' which is used to filter out audit records which contain a request or response message which is over this size. Default is 2.5MB, min is 1KB, Max is 20MB. When an audit record is skipped due to a message size, this is shown in UI via a new green download icon.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28830 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1472,6 +1472,11 @@ audit.validateSignature.maxrecords.clusterProperty=audit.validateSignature.maxre
 audit.validateSignature.maxrecords.default=100
 audit.validateSignature.maxrecords.visible=true
 
+audit.search.maxMessageSize.description=The maximum audited message in bytes the Gateway will read into memory when searching. Default 2.5MB. Min 1KB . Max 20MB.
+audit.search.maxMessageSize.clusterProperty=audit.search.maxMessageSize
+audit.search.maxMessageSize.default=2621440
+audit.search.maxMessageSize.visible=false
+
 httpDigest.enable.description=Enable storage of digest password compatible with HTTP Digest
 httpDigest.enable.clusterProperty=httpDigest.enable
 httpDigest.enable.default=false
