SSM-3387: fixed by hiding cluster property 'audit.validateSignature.maxrecords'.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28832 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1470,7 +1470,7 @@ audit.auditDetailExcludeList.visible=false
 audit.validateSignature.maxrecords.description=The maximum amount of audit records signatures to validate at a time. Min 100. Max 1000.
 audit.validateSignature.maxrecords.clusterProperty=audit.validateSignature.maxrecords
 audit.validateSignature.maxrecords.default=100
-audit.validateSignature.maxrecords.visible=true
+audit.validateSignature.maxrecords.visible=false
 
 audit.search.maxMessageSize.description=The maximum audited message in bytes the Gateway will read into memory when searching. Default 2.5MB. Min 1KB . Max 20MB.
 audit.search.maxMessageSize.clusterProperty=audit.search.maxMessageSize
