SSM-3383: Most Gateway packages now include an unsigned version of the Bouncy Castle provider jarfile, including the applet.  A few that need to install it as a provider still include the signed version.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28833 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/ivy.xml
+++ b/modules/ems/ivy.xml
@@ -61,6 +61,9 @@
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
 
+        <!-- This needs the signed version of bouncy castle because it registers it as a provider. -->
+        <exclude org="bouncycastle" module="bcprov-unsigned-jdk16" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
+
         <override org="antlr" module="antlr" matcher="exact" rev="2.7.7-l7p1"/>
 
         <conflict org="org.slf4j" module="slf4j-api" rev="1.6.1"/>
