--- a/modules/gateway/common/ivy.xml
+++ b/modules/gateway/common/ivy.xml
@@ -40,6 +40,8 @@
         <!-- Required on server -->
         <dependency org="org.springframework" name="spring-web" rev="3.0.5.RELEASE" force="true" conf="optional"/>
 
+        <!-- RSA needed for running tests (since alternatives jarfiles are not deployed) -->
+        <dependency org="com.rsa" name="jsafe-jce" rev="4.1.0.1" force="true" conf="test"/>
         <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
     </dependencies>
 </ivy-module>
