--- a/modules/common/ivy.xml
+++ b/modules/common/ivy.xml
@@ -26,7 +26,7 @@
         <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-test" rev="latest.integration" force="true" conf="test"/>
         <dependency org="apache-harmony" name="apache-harmony-asn1" rev="0.1" force="true" conf="core"/>
-        <dependency org="bouncycastle" name="bcprov-jdk16" rev="1.46" force="true" conf="core"/>
+        <dependency org="bouncycastle" name="bcprov-unsigned-jdk16" rev="1.46" force="true" conf="core"/>
         <dependency org="concurrent" name="concurrent" rev="1.3.4" force="true" conf="core"/>
         <dependency org="commons-collections" name="commons-collections" rev="3.2.1" force="true" conf="core"/>
         <dependency org="commons-httpclient" name="commons-httpclient" rev="3.1" force="true" conf="core">
