Implement the 3 scale assertions.  Includes a dialog to input context variable values for testing an assertion from the manager.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28872 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/Api3ScaleAssertion/ivy.xml
+++ b/modules/gateway/assertions/Api3ScaleAssertion/ivy.xml
@@ -21,6 +21,6 @@
 	<dependencies>
         <dependency name="layer7-modular-assertions" rev="latest.integration" force="true"
                     conf="compile->compile;runtime->runtime;test->test"/>
-        <dependency org="com.l7tech.lib" name="threescale-api" rev="1.0" force="true" conf="core"/>        
+        <dependency org="threescale" name="threescale-api" rev="1.1" force="true" conf="core"/>
 	</dependencies>
 </ivy-module>
