--- a/modules/gateway/assertions/Api3ScaleAssertion/src/main/resources/com/l7tech/external/assertions/api3scale/console/Api3ScaleAuthorizePropertiesDialog.properties
+++ b/modules/gateway/assertions/Api3ScaleAssertion/src/main/resources/com/l7tech/external/assertions/api3scale/console/Api3ScaleAuthorizePropertiesDialog.properties
@@ -1,3 +1,22 @@
 target=Target Prefix:
 privateKey=Provider private key:
-server=Server:
+applicationId=Application Id:
+add=Add
+remove=Remove
+edit=Edit
+applicationKey=Application Key:
+usage=Usage:
+saveReply=Prefix:
+referrer=Referrer
+test=Test
+usageTableEmptyError=The usage table must not be empty.
+metric=Metric
+value=Value
+noColumn=No such column
+prefix=Prefix:
+server=Reporting Server:
+remove.usage=Are you sure you want to remove the usage for {0}
+confirm.delete="Confirm Deletion"
+test.message.success=Authorize sent.
+test.title=Authorize Test
+test.message.fail=Failed to authorize.
