--- a/modules/gateway/assertions/Api3ScaleAssertion/src/main/resources/com/l7tech/external/assertions/api3scale/console/Api3ScaleReportPropertiesDialog.properties
+++ b/modules/gateway/assertions/Api3ScaleAssertion/src/main/resources/com/l7tech/external/assertions/api3scale/console/Api3ScaleReportPropertiesDialog.properties
@@ -5,3 +5,11 @@ add=Add
 remove=Remove
 properties=Properties
 errorTitle=Error
+privateKey=Provider private key:
+usageTableEmptyError=The usage table must not be empty.
+noColumn=No such column
+metric=Metric
+value=Value
+server=Reporting Server:
+remove.usage=Are you sure you want to remove the usage for {0}
+confirm.delete="Confirm Deletion"
