--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1498,3 +1498,7 @@ db.replicationDelayThreshold.clusterProperty = db.replicationDelayThreshold
 db.replicationErrorAuditInterval.description = The minimum interval between successive database replication failure audits (timeunit)
 db.replicationErrorAuditInterval.default = 60m
 db.replicationErrorAuditInterval.clusterProperty = db.replicationErrorAuditInterval
+
+gateway.3scale.reportingServer.description = The 3 scale reporting server
+gateway.3scale.reportingServer.default = http://su1.3scale.net
+gateway.3scale.reportingServer.clusterProperty = gateway.3scale.reportingServer
