Updated due to changes in the LDAP/LDAPS implementations. This file now contains the complete list of configurable parameters with their possible values, relevancy context and short description.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28880 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -10,33 +10,140 @@
 # The above mentioned script must be called with this file full patha and name as the only argument:
 # Example: .../radius_ldap_setup.sh /opt/SecureSpan/Appliance/config/radius_ldap_setup.conf
 
-# CFG_TYPE variable can have only one of these values: "file", "ldap_only", "radius_only" or "radius_and_ldap"
-# the "file" option is actually going to disable all the other possible authentication methods and provide
-# only the local, default authentication using files
+# CFG_TYPE variable can have only one of these values:
+# - file (disables all the other authentication methods and provide only the local/file authentication)
+# - ldap_only
+# - radius_only
+# - radius_and_ldap
+# Default: file
 CFG_TYPE="file"
 
-# LDAP_SRV_IP variable should contain the IP address of the LDAP server to be used.
-# It's value should only be a host IP address, e.g. "10.7.48.130" (a CIDR notation may not work)
-# This variable is only relevant if the CFG_TYPE variable is "ldap_only or "radius_and_ldap"
-LDAP_SRV_IP="10.7.48.130"
-
 # RADIUS_SRV_IP variable should contain the IP address of the Radius server to be used.
-# It's value should only be a host IP address, e.g. "10.7.48.130" (a CIDR notation may not work)
-# It is only relevant if the CFG_TYPE variable is "radius_only or "radius_and_ldap"
+# It is relevant only if the CFG_TYPE variable is "radius_only or "radius_and_ldap".
+# It's value should only be a host IP address, e.g. "10.7.48.130" (a CIDR notation may not work).
+# Default: <empty>
 RADIUS_SRV_IP="10.7.48.130"
 
-# LDAP_BASE variable should contain the DN used to ????, e.g. "dc=example,dc=com"
-# It is only relevant if the CFG_TYPE variable is "ldap_only or "radius_and_ldap"
-LDAP_BASE="dc=example,dc=com"
-
 # RADIUS_SECRET variable should be the string used as shared secret by the Radius server, e.g. "poiu0987"
-# It is only relevant if the CFG_TYPE variable is "radius_only or "radius_and_ldap"
+# It is relevant only if the CFG_TYPE variable is "radius_only or "radius_and_ldap".
+# Default: <empty>
 RADIUS_SECRET="poiu0987"
 
 # RADIUS_TIMEOUT should contain only one numeric value representing the time interval in seconds
 # that the client should wait for the Radius server to reply, e.g. "3" for 3 seconds
-# It is only relevant if the CFG_TYPE variable is "radius_only or "radius_and_ldap"
+# It is relevant only if the CFG_TYPE variable is "radius_only or "radius_and_ldap".
+# Default: 3
 RADIUS_TIMEOUT="3"
+
+# LDAP_TYPE variable is either "ldap" or "ldaps" to identify if natively supported TLS will be used
+# to communicate with the LDAP server or not. If "ldaps" is used, relevant variables below become mandatory.
+# It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
+# Default: ldap
+LDAP_TYPE="ldaps"
+
+# LDAP_SRV variable referes to the LDAP server to be used.
+# It is relevant only if the CFG_TYPE variable is "ldap_only or "radius_and_ldap".
+# If LDAP_TYPE is "ldap" a host IP address can be used, e.g. "10.7.48.130" (a CIDR notation may not work).
+# If LDAP_TYPE is "ldaps" a hostname must be used and it should match the CN in the certificate used for TLS.
+# Default: <empty>
+LDAP_SRV="ldapsrv.example.com"
+
+# LDAP_BASE variable should contain the DN of the search base, e.g. "dc=example,dc=com".
+# It is relevant only if the CFG_TYPE variable is "ldap_only or "radius_and_ldap".
+# Default: <empty>
+LDAP_BASE="dc=example,dc=com"
+
+# LDAP_PORT variable should contain one numeric value representing the port to be used
+# to contact the LDAP server.
+# It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
+# If it is empty it will defaults to 389 for LDAP_TYPE="ldap" and to 636 for LDAP_TYPE="ldaps".
+# Default: 389
+LDAP_PORT="636"
+
+# LDAP_CACERT_URL variable is use to retrive a CA certificate to be used in TLS.
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
+# The certificate must be in PEM format and must be valid.
+# There are 2 methods to upload a certificate on the SSG Appliance:
+# - scp via SSH as ssgconfig user (the certificate file must be place in the ssgconfig's home directory)
+# - provide an http(s) URL from which to retrieve the certificate
+#   - there should be no proxy to access this URL
+#   - http authentication is not supported
+# If scp method is used, the LDAP_CACERT_URL variable MUST be empty and LDAP_CACERT_FILE below should be used.
+# Default: <empty>
+LDAP_CACERT_URL="https://bigldap/bigldap.l7tech.com.pem"
+
+# LDAP_CACERT_FILE variable is used to make a certificate available for LDAP TLS configuration.
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps"
+# AND LDAP_CACERT_URL is empty.
+# The full path AND filename must be used and the file nominated here must be a x509 certificate.
+# Default: <empty>
+LDAP_CACERT_FILE="/home/ssgconfig/certificate.pem"
+
+# CLT_TLS_AUTH variable is used to enable client authentication to server in TLS handshake.
+# Enabliung this means TLS will be established with mutual authentication.
+# It can be "yes or "no".
+# Default: no
+CLT_TLS_AUTH="no"
+
+# The filename that contains the client certificate:
+# Default: <empty>
+LDAP_TLS_CERT="/etc/openldap/cacerts/client.pem"
+
+# The file that contains the private key that matches the certificate stored in
+# the TLS_CERT file. Password protected private keys are not currently supported.
+# Default: <empty>
+LDAP_TLS_KEY="/etc/openldap/cacerts/client.key"
+
+# ADVANCED_TLS_CONF variable is used to enable some andvanced check to be done by the client on
+# server's certificate in TLS handshake. It can be "yes" or "no".
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
+# If this is set to "yes", "LDAP_TLS_CIPHER_SUITE", "LDAP_TLS_REQCERT" and "LDAP_TLS_CRLCHECK" will
+# be required and set.
+# Default: no
+ADVANCED_TLS_CONF="no"
+
+# The acceptable cipher suite and preference order; Should be a cipher specification supported by the
+# local OpenSSL; (cipher-list values supported by the local OpenSSL: "openssl ciphers -v ALL")
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
+# Default: HIGH:MEDIUM:+SSLv2
+LDAP_TLS_CIPHER_SUITE="HIGH:MEDIUM:+SSLv2"
+
+# What checks to perform on server certificates in a TLS session, if any.
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
+# It can be one of the followings:
+# - never: the client will not request or check any server certificate
+# - allow: if no or bad certificate is provided, the session proceeds normally
+# - try: if a bad certificate is provided, the session is immediately terminated
+# - demand | hard: if no or bad certificate is provided, the session is immediately terminated
+# Default: demand
+LDAP_TLS_REQCERT="allow"
+
+# Check the CRL of the CA to verify if the server certificates have not been
+# revoked. (TLS_CACERTDIR must be set.)
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
+# It can be one of the followings:
+# - none: No CRL checks are performed
+# - peer: Check the CRL of the peer certificate
+# - all: Check the CRL for a whole certificate chain
+# Default: none
+LDAP_TLS_CRLCHECK="none"
+
+# LDAP_ANONYM variable enables bindDN with shared password or anonymous authentication to LDAP server.
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
+# It can be "yes" or "no"; if "no" is selected, "LDAP_BINDDN" and "LDAP_BIND_PASSWD" will be required and set.
+# Default: yes
+LDAP_ANONYM=no
+
+# The default bind DN to use when performing ldap operations. The bind DN
+# must be specified as a Distinguished Name in LDAP format.
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
+# Default: <empty>
+LDAP_BINDDN="cn=Manager,dc=example,dc=com"
+
+# The password for bind (simple authentication).
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
+# Default: <empty>
+LDAP_BIND_PASSWD="1234"
 
 
 # END of configuration file
