g SSB-679: Force standalone XVC to use the signed version of the Bouncy Castle provider jarfile.  This is required because the XVC uses BC's PKCS#12 KeyStore implementation for storing its trust store.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28884 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/xmlvpnclient/ivy.xml
+++ b/modules/xmlvpnclient/ivy.xml
@@ -40,6 +40,10 @@
         <dependency org="com.rsa" name="jsafe-jce-fips" rev="4.1" force="true" conf="core"/>
         <dependency org="com.rsa" name="certj" rev="3.1" force="true" conf="core"/>
         <dependency org="com.rsa" name="sslj" rev="5.1.1" force="true" conf="core"/>
+        <dependency org="bouncycastle" name="bcprov-jdk16" rev="1.46" force="true" conf="core"/> <!-- signed BC provider jar -->
+
+        <!-- The XVC needs the signed version of bouncy castle because it uses it as a provider in some places. -->
+        <exclude org="bouncycastle" module="bcprov-unsigned-jdk16" artifact="*" type="*" ext="jar" conf="*" matcher="exact" /> <!-- exclude unsigned BC jar -->
 
         <conflict org="org.slf4j" module="slf4j-api" rev="1.6.1"/>
     </dependencies>
