g SSB-679: The layer7-common, layer7-utility, and layer7-policy packages once again use the signed BC jarfile.  The layer7-gateway-console and layer7-gateway-console-applet packages, and only these two packages, now explicitly exclude the signed BC jarfile and include the unsigned version instead.  The layer7-gateway-server package no longer overrides any BC dependencies, and just inherits the dependency on the signed BC jarfile indirectly via its dependencies on common, utility, and policy.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28885 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console-applet/ivy.xml
+++ b/modules/gateway/console-applet/ivy.xml
@@ -33,6 +33,8 @@
         <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-wsdl" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-json" rev="latest.integration" force="true" conf="core"/>
+        <dependency org="bouncycastle" name="bcprov-unsigned-jdk16" rev="1.46" force="true" conf="core"/> <!-- use unsigned BC jar to be same as applet -->
+        <exclude org="bouncycastle" module="bcprov-jdk16" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />  <!-- exclude signed BC jar -->
         <exclude org="com.l7tech"/>
     </dependencies>
 </ivy-module>
