--- a/modules/policy/ivy.xml
+++ b/modules/policy/ivy.xml
@@ -31,7 +31,7 @@
         <dependency org="org.apache.santuario" name="xmlsec" rev="1.4.4" force="true" conf="core"/>
         <!-- Needed when tarari is used -->
         <dependency org="antlr" name="antlr" rev="2.7.7-l7p1" conf="optional,test"/>
-        <dependency org="bouncycastle" name="bcprov-unsigned-jdk16" rev="1.46" force="true" conf="core"/>
+        <dependency org="bouncycastle" name="bcprov-jdk16" rev="1.46" force="true" conf="core"/>
         <dependency org="jaxen" name="jaxen" rev="1.1.3" force="true" conf="core"/>
         <dependency org="net.sourceforge.nekohtml" name="nekohtml" rev="1.9.14" force="true" conf="core"/>
         <dependency org="org.apache.ws.commons.policy" name="policy" rev="1.0" force="true" conf="core"/>
