SSG-1975: The ComparisonAssertion now allows the user to specify how to handle multi-valued variables.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28886 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/ComparisonAssertion/src/main/resources/com/l7tech/external/assertions/comparison/ComparisonAssertion.properties
+++ b/modules/gateway/assertions/ComparisonAssertion/src/main/resources/com/l7tech/external/assertions/comparison/ComparisonAssertion.properties
@@ -126,5 +126,12 @@ dataTypePredicate.boolean.article = article.a
 dataTypePredicate.other.desc = Other
 # no article for Other -- it should never appear in a description
 
+multivaluedComparison.ALL.label = All values must pass
+multivaluedComparison.ANY.label = Any value must pass
+multivaluedComparison.FIRST.label = Compare first value only
+multivaluedComparison.LAST.label = Compare last value only
+multivaluedComparison.FAIL.label = Fail assertion
+
 regexPredicate.desc = matches {0}
 regexPredicate.negatedDesc = does not match {0}
+multivalued.label=&If Multivalued:
