--- a/modules/gateway/config/ivy.xml
+++ b/modules/gateway/config/ivy.xml
@@ -49,5 +49,6 @@
         <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
 
         <override org="antlr" module="antlr" matcher="exact" rev="2.7.7-l7p1"/>
+        <override org="wsdl4j" module="wsdl4j" matcher="exact" rev="1.6.2-l7p3"/>
     </dependencies>
 </ivy-module>
