SCP SFTP: working prototype continued, dev review #2 changes
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28928 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
@@ -26,3 +26,11 @@ sshTimeoutLabel=SSH Timeout
 publicKeyError=There was an issue with the SSH Public Key input. {0}
 passwordEmptyError=Password authentication is enabled but no password has been entered
 hostKeyEmptyError=The 'Validate Server's host key' checkbox is ticked but no server key has been input
+protocolLabel=Protocol:
+scpLabel=SCP
+sftpLabel=SFTP
+copyMethodLabel=Copy Method:
+uploadToLable=Upload To
+downloadFromLable=Download From
+passThroughCredentialsLabel=Pass through credentials in request
+specifyCredentialsLabel=Specify user credentials
