--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
@@ -26,3 +26,4 @@ sshTimeoutLabel=SSH Timeout
 publicKeyError=There was an issue with the SSH Public Key input. {0}
 passwordEmptyError=Password authentication is enabled but no password has been entered
 hostKeyEmptyError=The 'Validate Server's host key' checkbox is ticked but no server key has been input
+maxConcurrentSessionsPerUser=Max. concurrent session(s) per user:
