SCP SFTP: working prototype continued, dev review #2 changes.  Add UI control to manage SSH listen port dialog, passing in host private key to build KeyPairProvider for SSHD
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28941 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
@@ -1,29 +1,6 @@
-messageSourceLabel=Message Source:
-hostNameLabel=Host name:
-portNumberLabel=Port number:
-directoryLabel=Directory:
-fileNameLabel=File name:
-timeoutLabel=Connect timeout:
-autoGenerateFileNameLabel=Auto-generate file name
-specifyPatternLabel=Specify pattern:
-usernameLabel=Username
-passwordLabel=Password
-requiresPassword=Requires Password
-timeoutSecondsLabel=seconds
-portError=The port number must be a number between 1 and 65535, or a context variable. Default port is {0}.
-errorTitle=SSH Route Assertion Validation
-usernamePasswordLabel=Username/Password
-privateKeyLabel=Private Key
-wssHeaderLabel=Current WSS header handling
-wssDontModifyLabel=&Don't modify the request Security header
-wssRemoveActorLabel=Remove &Layer 7 actor and mustUnderstand attributes from processed Security header
-wssprocessHeaderLabel=&Remove processed Security header from request before routing
-connectionLabel=Connection
-authLabel=Authentication
-sshKnownHostsLabel=SSH Public Key
-loadFromFileLabel=Load From File
-sshTimeoutLabel=SSH Timeout
-publicKeyError=There was an issue with the SSH Public Key input. {0}
-passwordEmptyError=Password authentication is enabled but no password has been entered
-hostKeyEmptyError=The 'Validate Server's host key' checkbox is ticked but no server key has been input
-maxConcurrentSessionsPerUser=Max. concurrent session(s) per user:
+maxConcurrentSessionsPerUserLabel=Max. concurrent session(s) per user:
+scpLabel=SCP
+sftpLabel=SFTP
+enableLabel=Enable:
+hostPrivateKeyLabel=Host private key:
+setHostPrivateKeyLabel=Set host private key ...
