SCP SFTP: working prototype continued, dev review #2 changes.  more UI control changes to manage SSH listen port dialog
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28949 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
@@ -2,5 +2,5 @@ maxConcurrentSessionsPerUserLabel=Max. concurrent session(s) per user:
 scpLabel=SCP
 sftpLabel=SFTP
 enableLabel=Enable:
-hostPrivateKeyLabel=Host private key:
+hostPrivateKeyLabel=Host private key type:
 setHostPrivateKeyLabel=Set host private key ...
