--- a/modules/gateway/gateway-api/build.xml
+++ b/modules/gateway/gateway-api/build.xml
@@ -1,6 +1,6 @@
 <project name="layer7-gateway-api" default="compile">
     <property name="module.package.root" value="com/l7tech/gateway/api"/>
     <property name="module.sign" value="true"/>
-    <property name="module.version.target" value="1.0"/>
+    <property name="module.version.target" value="1.1"/> <!-- This is the API version -->
     <import file="../../../etc/build/build-common.xml"/>
 </project>
