SSG-2787: Fixed by implementing the feature request, "Granularity in enabling built in services".  For more details on the feature, please visit the func spec, http://sarek/mediawiki/index.php?title=Enable_Built-in_Services_Granularity.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28958 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1419,6 +1419,11 @@ jdbcConnection.driverClass.defaultList.default=com.mysql.jdbc.Driver
 jdbcConnection.driverClass.defaultList.clusterProperty=jdbcConnection.driverClass.defaultList
 jdbcConnection.driverClass.defaultList.visible=true
 
+builtinService.snmpQuery.enabled.description=Enable/disable the built-in service, "HTTP-based SNMP query service" (true/false; default true)
+builtinService.snmpQuery.enabled.default=true
+builtinService.snmpQuery.enabled.clusterProperty=builtinService.snmpQuery.enabled
+builtinService.snmpQuery.enabled.visible=true
+
 # 10485760 = 1024 * 1024 * 10
 documentDownload.maxSize.description=Maximum default size in bytes of a document download, or 0 for unlimited (Integer). Default is 10MB.
 documentDownload.maxSize.default=10485760
